[gd_scene load_steps=6 format=3 uid="uid://duahtwrl0ppcq"]

[ext_resource type="Script" path="res://scripts/UI/inventory_ui.gd" id="1_stlub"]
[ext_resource type="PackedScene" uid="uid://dvaxocn5ijwah" path="res://scenes/UI/item_detail_card.tscn" id="2_hlqsg"]
[ext_resource type="PackedScene" uid="uid://b4dccek7oxckx" path="res://scenes/UI/slot.tscn" id="2_var5s"]
[ext_resource type="PackedScene" uid="uid://cwpgva3q0ksmx" path="res://scenes/UI/wearing_ui.tscn" id="3_554mh"]
[ext_resource type="Texture2D" uid="uid://bn6k7ks2uiq4a" path="res://assets/terraria/Extra_58.png" id="5_31uqo"]

[node name="InventoryUI" type="Control"]
custom_minimum_size = Vector2(1920, 1080)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_stlub")

[node name="ItemSlots" type="GridContainer" parent="."]
layout_mode = 0
offset_right = 583.0
offset_bottom = 111.0
theme_override_constants/h_separation = 7
theme_override_constants/v_separation = 7
columns = 10

[node name="Slot" parent="ItemSlots" instance=ExtResource("2_var5s")]
layout_mode = 2
number = "1"

[node name="Slot2" parent="ItemSlots" instance=ExtResource("2_var5s")]
layout_mode = 2
number = "2"

[node name="Slot3" parent="ItemSlots" instance=ExtResource("2_var5s")]
layout_mode = 2
number = "3"

[node name="Slot4" parent="ItemSlots" instance=ExtResource("2_var5s")]
layout_mode = 2
number = "4"

[node name="Slot5" parent="ItemSlots" instance=ExtResource("2_var5s")]
layout_mode = 2
number = "5"

[node name="Slot6" parent="ItemSlots" instance=ExtResource("2_var5s")]
layout_mode = 2
number = "6"

[node name="Slot7" parent="ItemSlots" instance=ExtResource("2_var5s")]
layout_mode = 2
number = "7"

[node name="Slot8" parent="ItemSlots" instance=ExtResource("2_var5s")]
layout_mode = 2
number = "8"

[node name="Slot9" parent="ItemSlots" instance=ExtResource("2_var5s")]
layout_mode = 2
number = "9"

[node name="Slot10" parent="ItemSlots" instance=ExtResource("2_var5s")]
layout_mode = 2
number = "0"

[node name="Slot11" parent="ItemSlots" instance=ExtResource("2_var5s")]
layout_mode = 2

[node name="Slot12" parent="ItemSlots" instance=ExtResource("2_var5s")]
layout_mode = 2

[node name="Slot13" parent="ItemSlots" instance=ExtResource("2_var5s")]
layout_mode = 2

[node name="Slot14" parent="ItemSlots" instance=ExtResource("2_var5s")]
layout_mode = 2

[node name="Slot15" parent="ItemSlots" instance=ExtResource("2_var5s")]
layout_mode = 2

[node name="Slot16" parent="ItemSlots" instance=ExtResource("2_var5s")]
layout_mode = 2

[node name="Slot17" parent="ItemSlots" instance=ExtResource("2_var5s")]
layout_mode = 2

[node name="Slot18" parent="ItemSlots" instance=ExtResource("2_var5s")]
layout_mode = 2

[node name="Slot19" parent="ItemSlots" instance=ExtResource("2_var5s")]
layout_mode = 2

[node name="Slot20" parent="ItemSlots" instance=ExtResource("2_var5s")]
layout_mode = 2

[node name="Slot21" parent="ItemSlots" instance=ExtResource("2_var5s")]
layout_mode = 2

[node name="Slot22" parent="ItemSlots" instance=ExtResource("2_var5s")]
layout_mode = 2

[node name="Slot23" parent="ItemSlots" instance=ExtResource("2_var5s")]
layout_mode = 2

[node name="Slot24" parent="ItemSlots" instance=ExtResource("2_var5s")]
layout_mode = 2

[node name="Slot25" parent="ItemSlots" instance=ExtResource("2_var5s")]
layout_mode = 2

[node name="Slot26" parent="ItemSlots" instance=ExtResource("2_var5s")]
layout_mode = 2

[node name="Slot27" parent="ItemSlots" instance=ExtResource("2_var5s")]
layout_mode = 2

[node name="Slot28" parent="ItemSlots" instance=ExtResource("2_var5s")]
layout_mode = 2

[node name="Slot29" parent="ItemSlots" instance=ExtResource("2_var5s")]
layout_mode = 2

[node name="Slot30" parent="ItemSlots" instance=ExtResource("2_var5s")]
layout_mode = 2

[node name="Slot31" parent="ItemSlots" instance=ExtResource("2_var5s")]
layout_mode = 2

[node name="Slot32" parent="ItemSlots" instance=ExtResource("2_var5s")]
layout_mode = 2

[node name="Slot33" parent="ItemSlots" instance=ExtResource("2_var5s")]
layout_mode = 2

[node name="Slot34" parent="ItemSlots" instance=ExtResource("2_var5s")]
layout_mode = 2

[node name="Slot35" parent="ItemSlots" instance=ExtResource("2_var5s")]
layout_mode = 2

[node name="Slot36" parent="ItemSlots" instance=ExtResource("2_var5s")]
layout_mode = 2

[node name="Slot37" parent="ItemSlots" instance=ExtResource("2_var5s")]
layout_mode = 2

[node name="Slot38" parent="ItemSlots" instance=ExtResource("2_var5s")]
layout_mode = 2

[node name="Slot39" parent="ItemSlots" instance=ExtResource("2_var5s")]
layout_mode = 2

[node name="Slot40" parent="ItemSlots" instance=ExtResource("2_var5s")]
layout_mode = 2

[node name="Slot41" parent="ItemSlots" instance=ExtResource("2_var5s")]
layout_mode = 2

[node name="Slot42" parent="ItemSlots" instance=ExtResource("2_var5s")]
layout_mode = 2

[node name="Slot43" parent="ItemSlots" instance=ExtResource("2_var5s")]
layout_mode = 2

[node name="Slot44" parent="ItemSlots" instance=ExtResource("2_var5s")]
layout_mode = 2

[node name="Slot45" parent="ItemSlots" instance=ExtResource("2_var5s")]
layout_mode = 2

[node name="Slot46" parent="ItemSlots" instance=ExtResource("2_var5s")]
layout_mode = 2

[node name="Slot47" parent="ItemSlots" instance=ExtResource("2_var5s")]
layout_mode = 2

[node name="Slot48" parent="ItemSlots" instance=ExtResource("2_var5s")]
layout_mode = 2

[node name="Slot49" parent="ItemSlots" instance=ExtResource("2_var5s")]
layout_mode = 2

[node name="Slot50" parent="ItemSlots" instance=ExtResource("2_var5s")]
layout_mode = 2

[node name="WearingUI" parent="." instance=ExtResource("3_554mh")]
offset_left = 1696.0
offset_top = 285.0
offset_right = 1696.0
offset_bottom = 285.0

[node name="SettingsButton" type="Button" parent="."]
layout_mode = 0
offset_left = 1773.0
offset_top = 1019.0
offset_right = 1857.0
offset_bottom = 1050.0
text = "Settings"
flat = true

[node name="ItemDetailCard" parent="." instance=ExtResource("2_hlqsg")]
visible = false
layout_mode = 0
mouse_filter = 2

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 1648.0
offset_top = 780.0
offset_right = 1688.0
offset_bottom = 820.0
texture = ExtResource("5_31uqo")

[node name="Label" type="Label" parent="TextureRect"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
text = "45"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="SettingsButton" to="." method="_on_settings_button_pressed"]
